unpackaged/main/default/objects/Floor_Plan_Request__c/Floor_Plan_Request__c.object-meta.xml
<CustomObject>
    <description>GES Connect (GC) Floor Plan Request Custom Object</description>
    <label>Floor Plan Request</label>
    <nameField>
        <displayFormat>FPR-{000000}</displayFormat>
        <label>Floor Plan Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Floor Plan Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>