unpackaged/main/default/objects/Floor_Plan_Request__c/fields/Column_Details__c.field-meta.xml
<CustomField>
    <fullName>Column_Details__c</fullName>
    <label>Column Details</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Turn On</fullName>
            </value>
            <value>
                <fullName>Turn Off</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>