unpackaged/main/default/objects/Floor_Plan_Request__c/fields/Completed_19__c.field-meta.xml
<CustomField>
    <fullName>Completed_19__c</fullName>
    <label>Completed 19</label>
    <type>Date</type>
</CustomField>