unpackaged/main/default/objects/Floor_Plan_Request__c/fields/Completed_1__c.field-meta.xml
<CustomField>
    <fullName>Completed_1__c</fullName>
    <label>Completed 1</label>
    <type>Date</type>
</CustomField>