unpackaged/main/default/objects/Floor_Plan_Request__c/fields/Completed_20__c.field-meta.xml
<CustomField>
    <fullName>Completed_20__c</fullName>
    <label>Completed 20</label>
    <type>Date</type>
</CustomField>