unpackaged/main/default/objects/Floor_Plan_Request__c/fields/Connect2_Show__c.field-meta.xml
<CustomField>
    <fullName>Connect2_Show__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Connect2 Show</label>
    <referenceTo>GC_Connect2_Show__c</referenceTo>
    <relationshipLabel>Floor Plan Requests</relationshipLabel>
    <relationshipName>Floor_Plan_Requests</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>