unpackaged/main/default/objects/Floor_Plan_Request__c/fields/Contract_Status_Formula__c.field-meta.xml
<CustomField>
    <fullName>Contract_Status_Formula__c</fullName>
    <formula>Connect2_Show__r.StageName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Status</label>
    <type>Text</type>
</CustomField>