unpackaged/main/default/objects/Floor_Plan_Request__c/fields/Drafter_Hours_3__c.field-meta.xml
<CustomField>
    <fullName>Drafter_Hours_3__c</fullName>
    <label>Hours 3</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>