unpackaged/main/default/objects/Floor_Plan_Request__c/fields/Drafter_Notes__c.field-meta.xml
<CustomField>
    <fullName>Drafter_Notes__c</fullName>
    <label>Drafter Notes</label>
    <length>4000</length>
    <type>Html</type>
</CustomField>