unpackaged/main/default/objects/Floor_Plan_Request__c/fields/Electrical_Download_Due_Date_10__c.field-meta.xml
<CustomField>
    <fullName>Electrical_Download_Due_Date_10__c</fullName>
    <label>Electrical Download Due Date 10</label>
    <type>Date</type>
</CustomField>