unpackaged/main/default/objects/Floor_Plan_Request__c/fields/Electrical_Quantity_11x17_by_Hall__c.field-meta.xml
<CustomField>
    <fullName>Electrical_Quantity_11x17_by_Hall__c</fullName>
    <label>Quantity 11x17 by Hall</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>