unpackaged/main/default/objects/Floor_Plan_Request__c/fields/Facility_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Facility_Contact_Email__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>