unpackaged/main/default/objects/Floor_Plan_Request__c/fields/Facility_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Facility_Contact_Name__c</fullName>
    <label>Facility Event Manager</label>
    <length>50</length>
    <type>Text</type>
</CustomField>