unpackaged/main/default/objects/Floor_Plan_Request__c/fields/Facility_Contact_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Facility_Contact_Phone_Number__c</fullName>
    <label>Phone Number</label>
    <type>Phone</type>
</CustomField>