unpackaged/main/default/objects/Floor_Plan_Request__c/fields/Fire_Marshaling__c.field-meta.xml
<CustomField>
    <fullName>Fire_Marshaling__c</fullName>
    <description>Does your show require Fire Marshaling at this time?</description>
    <inlineHelpText>Does your show require Fire Marshaling at this time?</inlineHelpText>
    <label>Fire Marshaling</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>