unpackaged/main/default/objects/Floor_Plan_Request__c/fields/FPR_Show_Job_Number__c.field-meta.xml
<CustomField>
    <fullName>FPR_Show_Job_Number__c</fullName>
    <formula>Connect2_Show__r.Job_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Show Job Number</label>
    <type>Text</type>
</CustomField>