unpackaged/main/default/objects/Floor_Plan_Request__c/fields/FPR_Show_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>FPR_Show_Start_Date__c</fullName>
    <formula>Connect2_Show__r.Show_Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Show Start Date</label>
    <type>Date</type>
</CustomField>