unpackaged/main/default/objects/Floor_Plan_Request__c/fields/Graphics_GEM_Numbering_Scheme_provide_s__c.field-meta.xml
<CustomField>
    <fullName>Graphics_GEM_Numbering_Scheme_provide_s__c</fullName>
    <label>Graphics/GEM # Scheme (provide sample)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Turn On</fullName>
            </value>
            <value>
                <fullName>Turn Off</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>