unpackaged/main/default/objects/Floor_Plan_Request__c/fields/Hall_Breakdown__c.field-meta.xml
<CustomField>
    <fullName>Hall_Breakdown__c</fullName>
    <label>Hall Breakdown</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>