unpackaged/main/default/objects/Floor_Plan_Request__c/fields/Halls__c.field-meta.xml
<CustomField>
    <fullName>Halls__c</fullName>
    <label>Hall(s)</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>