unpackaged/main/default/objects/Floor_Plan_Request__c/fields/Instructions_Notes__c.field-meta.xml
<CustomField>
    <fullName>Instructions_Notes__c</fullName>
    <defaultValue>&quot;If needed, download and attach any 2D files from the Design Center. Provide location of items either on marked up pdf or in the instructions field on this form.&quot;</defaultValue>
    <label>Note:</label>
    <type>TextArea</type>
</CustomField>