unpackaged/main/default/objects/Floor_Plan_Request__c/fields/Is_Approval_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Is_Approval_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Approval Submitted</label>
    <type>Checkbox</type>
</CustomField>