unpackaged/main/default/objects/Floor_Plan_Request__c/fields/Max_Layout_Horizontal_8x10__c.field-meta.xml
<CustomField>
    <fullName>Max_Layout_Horizontal_8x10__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Max Layout - Horizontal 8x10</label>
    <type>Checkbox</type>
</CustomField>