unpackaged/main/default/objects/Floor_Plan_Request__c/fields/Number_of_Booths__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Booths__c</fullName>
    <label>Number of Booths</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>