unpackaged/main/default/objects/Floor_Plan_Request__c/fields/Numbering_System__c.field-meta.xml
<CustomField>
    <fullName>Numbering_System__c</fullName>
    <label>Numbering System</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Odd/Even (2,4,6 etc.)</fullName>
            </value>
            <value>
                <fullName>Consecutive (1,2,3 etc.)</fullName>
            </value>
            <value>
                <fullName>Serpentine</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Other (describe)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>