unpackaged/main/default/objects/Floor_Plan_Request__c/fields/Other_Layout__c.field-meta.xml
<CustomField>
    <fullName>Other_Layout__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Other Layout (Describe Below)</label>
    <type>Checkbox</type>
</CustomField>