unpackaged/main/default/objects/Floor_Plan_Request__c/fields/Request_Elapsed_Time__c.field-meta.xml
<CustomField>
    <fullName>Request_Elapsed_Time__c</fullName>
    <formula>IF( 
Completed_Date__c - Submitted_Date__c &gt; 0 , 
TEXT( FLOOR( Completed_Date__c - Submitted_Date__c ) ) &amp; &quot; days &quot; 
&amp; TEXT( FLOOR( MOD( (Completed_Date__c - Submitted_Date__c ) * 24, 24 ) ) ) &amp; &quot; hours &quot; 
&amp; TEXT( ROUND( MOD( (Completed_Date__c - Submitted_Date__c ) * 24 * 60, 60 ), 0 ) ) &amp; &quot; minutes&quot;, 
&quot;&quot; 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Request Elapsed Time</label>
    <type>Text</type>
</CustomField>