unpackaged/main/default/objects/Floor_Plan_Request__c/fields/Request_Plan_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_Plan_Type__c</fullName>
    <label>Plan Type (Multi Select)</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Initial</fullName>
            </value>
            <value>
                <fullName>Revision</fullName>
            </value>
            <value>
                <fullName>Fire Marshal</fullName>
            </value>
            <value>
                <fullName>Zone File Upload</fullName>
                <label>Zone Upload</label>
            </value>
            <value>
                <fullName>Management/Official Plan</fullName>
                <label>Management/Official</label>
            </value>
            <value>
                <fullName>Wall Build Plan</fullName>
            </value>
            <value>
                <fullName>Meeting/Skype with Drafter</fullName>
                <label>Meeting/Drafter Collaboration</label>
            </value>
            <value>
                <fullName>Building Maintenance</fullName>
            </value>
            <value>
                <fullName>Target Plan</fullName>
                <label>Ops - Target Plan</label>
            </value>
            <value>
                <fullName>Operations - Empty Plan</fullName>
                <label>Ops - Empty Plan</label>
            </value>
            <value>
                <fullName>Floor Marking</fullName>
                <label>Ops - Floor Marking</label>
            </value>
            <value>
                <fullName>Operations - Pipe &amp; Drape Plan</fullName>
                <label>Ops - Pipe &amp; Drape</label>
            </value>
            <value>
                <fullName>Operations - General Plan</fullName>
                <label>Ops - General Plan</label>
            </value>
            <value>
                <fullName>Exhibitor Service Plan</fullName>
            </value>
            <value>
                <fullName>Carpet Visual Delivery</fullName>
                <label>Visual Delivery - Carpet</label>
            </value>
            <value>
                <fullName>Deco Plan</fullName>
                <label>Visual Delivery - Deco</label>
            </value>
            <value>
                <fullName>NSC Heat Map</fullName>
            </value>
            <value>
                <fullName>TSE Electrical Download Plan</fullName>
                <label>TSE Electrical Download</label>
            </value>
            <value>
                <fullName>Prints</fullName>
            </value>
            <value>
                <fullName>Electronic File Request - Internal Use Only</fullName>
                <label>Electronic File Request - Internal Distribution</label>
            </value>
            <value>
                <fullName>Electronic File Request</fullName>
                <label>Electronic File Request - External Distribution</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>