unpackaged/main/default/objects/Floor_Plan_Request__c/fields/Time_Spent_19__c.field-meta.xml
<CustomField>
    <fullName>Time_Spent_19__c</fullName>
    <label>Time Spent 19</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>