unpackaged/main/default/objects/Floor_Plan_Request__c/fields/Use_Previous_Year_Layout__c.field-meta.xml
<CustomField>
    <fullName>Use_Previous_Year_Layout__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Previous Year Layout</label>
    <type>Checkbox</type>
</CustomField>