unpackaged/main/default/objects/Floor_Plan_Request__c/fields/UserEntered_Requested_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>UserEntered_Requested_Due_Date__c</fullName>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>