unpackaged/main/default/objects/Floor_Plan_Request__c/fields/Work_Log_Date_Time_3__c.field-meta.xml
<CustomField>
    <fullName>Work_Log_Date_Time_3__c</fullName>
    <label>Work Log Date/Time 3</label>
    <type>DateTime</type>
</CustomField>