unpackaged/main/default/objects/Floor_Plan_Request__c/fields/Work_Log_Date_Time_8__c.field-meta.xml
<CustomField>
    <fullName>Work_Log_Date_Time_8__c</fullName>
    <label>Work Log Date/Time 8</label>
    <type>DateTime</type>
</CustomField>