unpackaged/main/default/objects/Floor_Plan_Request__c/validationRules/DueDatenoFastTrack.validationRule-meta.xml
<ValidationRule>
    <fullName>DueDatenoFastTrack</fullName>
    <active>true</active>
    <errorConditionFormula>Fast_Track__c = false &amp;&amp; NOT(ISBLANK(Requested_Due_Date__c))</errorConditionFormula>
    <errorDisplayField>Fast_Track__c</errorDisplayField>
    <errorMessage>Please check Fast Track if indicating a faster turn around time is needed or remove Requested Due Date to proceed.</errorMessage>
</ValidationRule>