unpackaged/main/default/objects/Floor_Plan_Request__c/validationRules/Fast_Track_and_Due_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Fast_Track_and_Due_Date</fullName>
    <active>true</active>
    <errorConditionFormula>Fast_Track__c = True &amp;&amp; ISBLANK(Requested_Due_Date__c)</errorConditionFormula>
    <errorDisplayField>Requested_Due_Date__c</errorDisplayField>
    <errorMessage>Please indicate a Requested Due Date if selecting to Fast Track this request</errorMessage>
</ValidationRule>