unpackaged/main/default/objects/Floor_Plan_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>UserEntered_Requested_Due_Date__c</columns>
    <columns>Opportunity_Name__c</columns>
    <columns>Production_Location__c</columns>
    <columns>Claimed_By__c</columns>
    <columns>Requester__c</columns>
    <columns>FPR_Show_Name__c</columns>
    <columns>FPR_Show_Job_Number__c</columns>
    <columns>Regional_Overhead_Picklist__c</columns>
    <columns>FPR_Show_Start_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Connect2_Show__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>12/31/2020 12:00 AM</value>
    </filters>
    <label>All</label>
</ListView>