unpackaged/main/default/objects/Floor_Plan_Request__c/listViews/Cary_Hatcher_All.listView-meta.xml
<ListView>
    <fullName>Cary_Hatcher_All</fullName>
    <columns>NAME</columns>
    <columns>UserEntered_Requested_Due_Date__c</columns>
    <columns>Opportunity_Name__c</columns>
    <columns>Production_Location__c</columns>
    <columns>Requester__c</columns>
    <columns>Claimed_By__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>FPR_Show_Job_Number__c</columns>
    <columns>Regional_Overhead_Picklist__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Claimed_By__c</field>
        <operation>equals</operation>
        <value>Cary Hatcher</value>
    </filters>
    <label>Cary Hatcher All</label>
</ListView>