unpackaged/main/default/objects/Floor_Plan_Request__c/listViews/Claimed_by_Benika_Stancil2.listView-meta.xml
<ListView>
    <fullName>Claimed_by_Benika_Stancil2</fullName>
    <columns>NAME</columns>
    <columns>UserEntered_Requested_Due_Date__c</columns>
    <columns>Fast_Track__c</columns>
    <columns>Requested_Due_Date__c</columns>
    <columns>Opportunity_Name__c</columns>
    <columns>Production_Location__c</columns>
    <columns>Requester__c</columns>
    <columns>Assigned_Remote_Drafter__c</columns>
    <columns>Claimed_By__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>FPR_Show_Job_Number__c</columns>
    <columns>Regional_Overhead_Picklist__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Claimed_By__c</field>
        <operation>equals</operation>
        <value>Benika Stancil</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Complete,Plan Review</value>
    </filters>
    <label>Benika Stancil Open</label>
    <language>en_US</language>
</ListView>