unpackaged/main/default/objects/Floor_Plan_Request__c/listViews/Copy_of_Lisa_Pizzato_Open.listView-meta.xml
<ListView>
    <fullName>Copy_of_Lisa_Pizzato_Open</fullName>
    <columns>NAME</columns>
    <columns>UserEntered_Requested_Due_Date__c</columns>
    <columns>Opportunity_Name__c</columns>
    <columns>Production_Location__c</columns>
    <columns>Requester__c</columns>
    <columns>Claimed_By__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>FPR_Show_Job_Number__c</columns>
    <columns>Regional_Overhead_Picklist__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Status__c</columns>
    <columns>Request_Plan_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Claimed_By__c</field>
        <operation>equals</operation>
        <value>Lisanne Pizzato,Lisa Pizzato</value>
    </filters>
    <label>Lisa Pizzato All</label>
</ListView>